NetworkPolicy/project3/centos-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod
  name: pod-prod
  labels:
    app: centos
    env: prod
spec:
  containers:
    - image: centos
      name: centos-container
      tty: true
      stdin: true
