NetworkPolicy/project3/centos-test.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: centos-test
  labels:
    app: centos
    env: test
spec:
  containers:
    - image: centos
      name: centos-container
      tty: true
      stdin: true
