NetworkPolicy/project3/nginx-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: prod
  name: nginx-prod
  labels:
    app: nginx
    env: prod
spec:
  containers:
    - image: nginx
      name: nginx-container
      ports:
        - containerPort: 80
          protocol: TCP
