NetworkPolicy/project3/nginx-test.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: test
  name: nginx-test
  labels:
    app: nginx
    env: test
spec:
  containers:
    - image: nginx
      name: nginx-container
      ports:
        - containerPort: 80
          protocol: TCP
