NetworkPolicy/project3/allow-prod-to-access-port-80-of-test.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: allow-test-port80-to-prod
  labels:
    npol: allow-test-port80-to-prod
spec:
  podSelector:
    matchLabels:
      env: prod
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: test
        - podSelector:
            matchLabels:
              env: test
      ports:
        - port: 80
          protocol: TCP
