NetworkPolicy/project3/prod-block-incoming-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: prod
  name: prod-deny-all
  labels:
    npol: prod-deny-all
spec:
  podSelector: {}
  ingress: []
