NetworkPolicy/project3/prod-internal-allow-traffic.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-internal-allow
  labels:
    npol: prod-internal-allow
spec:
  podSelector:
    matchLabels:
      env: prod
  ingress:
    - from:
        - PodSelector:
            matchLabels:
              env: prod
